AM_CPPFLAGS = -I$(top_srcdir)/include
bin_PROGRAMS = mfm
mfm_CPPFLAGS = -Iinclude
mfm_LDFLAGS = $(LIBCONFIG_LIBS)
mfm_SOURCES = \
		src/main.cc \
		src/config.cc \
		src/fs.cc \
		src/globals.cc \
		src/input.cc \
		src/path.cc \
		src/pixmaps.cc \
		src/table_files.cc \
		src/table_locations.cc \
		src/toolbar.cc \
		src/win_about.cc \
		src/win_help.cc \
		src/win_input.cc \
		src/win_main.cc

